small changes footer

--- a/styleNiklas.css
+++ b/styleNiklas.css
@@ -202,3 +202,27 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+.footer-wrapper-main-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-wrapper-main-middle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-wrapper-main-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-wrapper-main-right {
+}
