--- a/styleOlli.css
+++ b/styleOlli.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
 
-.brd{
-    border: solid 2px gray;
-}
-
 .hero-section{
     min-height: calc(100vh / 2.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-image: url(./img/bgk-header.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .tajam{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0.4em;
 }
 
 .tajam-caption{
@@ -27,7 +27,8 @@
 .hero-section-nav{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-shrink: 2;
 }
 
 .hero-section-nav-li{
@@ -63,21 +64,25 @@ h1{
     text-align: center;
 }
 
+article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .line{
-    /* display: inline-block; */
-    /* text-align: center; */
-    /* justify-self: center; */
-    margin: 33em;;
     width: 50px;
     border-bottom: solid 1px rgba(0,255,255, 0.8);
 }
 
-p{
+article p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgba(255,255,255,0.7);
     line-height: 1.5em;
     margin: 3rem;
     text-align: center;
+    min-width: 200px;
+    max-width: 1200px;
 }
 
 .btn-learnMore{
@@ -85,7 +90,7 @@ p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color:rgba(0,255,255, 0.8);
     letter-spacing: 0.04em;
-    margin-left: calc(100vw / 2.4);
+    /* align-self: center; */
     margin-bottom: 3em;
     padding: 0.8em 1em;
     border: 1px solid rgba(0,255,255, 0.8);
