--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ body{
     margin: 0;
     padding: 0;
 }
+
+.app{
+    max-width: 99vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
