--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: rgb(214, 217, 219);
 }
 
 .app{
-    max-width: 99vw;
+    min-width: 80vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
 }
