--- a/styleNiklas.css
+++ b/styleNiklas.css
@@ -1,15 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
 .expertise {
+  min-width: 90%;
   font-size: 62.5%;
   background-color: white;
   color: black;
   height: 60vh;
   display: flex;
-  margin-left: 20%;
-  margin-right: 20%;
   flex-direction: column;
-  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .expertise p {
@@ -71,13 +70,15 @@
 }
 
 .meet-our-amazin-team {
+  min-width: 90%;
   background-image: url("img/bgk-header.png");
   background-size: cover;
-  height: 60vh;
+  height: 70vh;
   color: white;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   flex-direction: column;
+  justify-content: center;
 }
 
 .team-section-header {
@@ -85,6 +86,7 @@
   margin-top: 1.5rem;
   flex-direction: column;
   align-items: center;
+  line-height: 0.5em;
 }
 
 .team-section-header p {
@@ -137,10 +139,12 @@
   color: rgb(134, 215, 205);
 }
 .contact-section {
+  min-width: 90%;
+  background-color: white;
   display: flex;
   min-height: 60vh;
   justify-content: center;
-  border: solid 2px red;
+  /* border: solid 2px red; */
   flex-wrap: wrap;
 }
 
@@ -155,13 +159,13 @@
   margin-right: 5rem;
 }
 .contact-field input {
-  padding: 1rem 8rem;
+  padding: 0.8rem 8rem 0.8rem 0.3rem;
   margin-bottom: 1rem;
   border: solid 0.1rem lightgray;
-  color: lightgray;
+  color: rgb(182, 180, 180);
 }
 #big-inputbox {
-  padding: 8rem;
+  padding: 0.5rem 8rem 8rem 0.3rem;
 }
 #button {
   border: solid 0.1rem rgb(134, 215, 205);
@@ -195,6 +199,7 @@
   align-items: baseline;
 }
 footer {
+  min-width: 90%;
   background-image: url(/img/bgk-footer.png);
   background-size: cover;
   height: 30vh;
