--- a/styleOlli.css
+++ b/styleOlli.css
@@ -2,7 +2,8 @@
 
 /* ****************** Hero Section ****************** */
 .hero-section{
-    min-height: calc(100vh / 2.3);
+    min-width: 90%;
+    min-height: 14vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +29,7 @@
 .hero-section-nav{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     flex-shrink: 2;
 }
 
@@ -89,15 +90,11 @@ h1{
 /* *********** Our Story Section *************** */
 
 .ourstory-section{
-    max-width: 85vw;;
+    min-width: 90%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    /* flex-wrap: wrap; */
     background-color: white;
 }
-
-
 
 .ourstory-section>article{
     display: flex;
@@ -116,7 +113,8 @@ h1{
 
 /*  */
 .watchstory-section{
-    min-height: calc(100vh / 2.3);
+    min-height: 40vh;
+    min-width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -130,7 +128,7 @@ h1{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 0.7em;
     color: white;
-    align-self: ;
+    /* align-self: ; */
 }
 
 /* *********** Button ************************ */
