--- a/styleNiklas.css
+++ b/styleNiklas.css
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
 .expertise {
-  min-width: 90%;
   font-size: 62.5%;
   background-color: white;
   color: black;
-  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .expertise p {
@@ -18,6 +17,7 @@
   text-align: center;
 }
 .expertise h2 {
+  margin-top: 2em;
   font-size: 1.8rem;
 }
 
@@ -70,7 +70,7 @@
 }
 
 .meet-our-amazin-team {
-  min-width: 90%;
+  /* min-width: 90%; */
   background-image: url("img/bgk-header.png");
   background-size: cover;
   height: 70vh;
@@ -133,13 +133,13 @@
 }
 
 #hiring-button {
-  border: solid 0.2rem rgb(134, 215, 205);
-  border-radius: 0.3rem;
+  border: solid 0.1rem rgb(134, 215, 205);
+  border-radius: 0.1rem;
   padding: 1.1rem;
   color: rgb(134, 215, 205);
 }
 .contact-section {
-  min-width: 90%;
+  /* min-width: 90%; */
   background-color: white;
   display: flex;
   min-height: 60vh;
@@ -159,13 +159,13 @@
   margin-right: 5rem;
 }
 .contact-field input {
-  padding: 0.8rem 8rem 0.8rem 0.3rem;
+  padding: 0.8rem 12rem 0.8rem 0.3rem;
   margin-bottom: 1rem;
   border: solid 0.1rem lightgray;
   color: rgb(182, 180, 180);
 }
 #big-inputbox {
-  padding: 0.5rem 8rem 8rem 0.3rem;
+  padding: 0.5rem 12rem 8rem 0.3rem;
 }
 #button {
   border: solid 0.1rem rgb(134, 215, 205);
@@ -199,37 +199,103 @@
   align-items: baseline;
 }
 footer {
-  min-width: 90%;
+  /* min-width: 90%; */
   background-image: url(/img/bgk-footer.png);
   background-size: cover;
   height: 30vh;
-  display: flex;
   color: white;
 }
 
 .footer-wrapper-main {
+  /* max-width: 70%; */
+  /* margin-top: 2%;
+  margin-left: 15%; */
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  gap: 1em;
 }
 
 .footer-wrapper-main-left {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+}
+
+.social-media{
+  margin-top: 8%;
+}
+
+.location{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.location>img{
+  align-self: flex-start;
+  padding-top: 1em;
+  padding-right: 0.8em; 
+}
+
+.phone{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.phone>img{
+  padding-right: 0.8em;
 }
 
 .footer-wrapper-main-middle {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
 .footer-wrapper-main-right {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
+
+.footer-wrapper-bottom {
+  display: flex;
+  justify-content: center;
+  gap: 24em;
+}
+
+.footer-bottom-left{
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
+
+.footer-bottom-right{
+  display: flex;
+  padding: 0 1em;
+}
+
+.email-senden{
+  position: relative;
+  display: inline-block;
+  top: 0.6em;
+  width: 2.5rem;
+  height: 1.45rem;
+  margin-left: 0.2em;
+  padding: 0.5em 0.2em 0.2em 0.5em;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+}
+
+#email{
+  color: rgba(255, 255, 255, 0.612);
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0.6em;
+  border-radius: 3px;
+}
+
