--- a/styleOlli.css
+++ b/styleOlli.css
@@ -1,8 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
-
 /* ****************** Hero Section ****************** */
-.hero-section {
-  min-height: calc(100vh / 2.3);
+.hero-section{
+  /* min-width: 90%; */
+  min-height: 14vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,77 +10,62 @@
   background-size: cover;
 }
 
-.tajam {
+.tajam{
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: -1%;
 }
 
-.tajam-caption {
-  font-family: "Montserrat", sans-serif; /*Hevetica, sans-serif; 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;*/
+.tajam-caption{
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.6em;
-  /* letter-spacing: 0.04em; */
-  color: rgba(0, 255, 255, 0.5);
+  letter-spacing: 0.04em;
+  color: rgba(0,255,255, 0.5); 
   /* background: linear-gradient(#64e4e6, #5561e7); */
 }
 
-.hero-section-nav {
+.hero-section-nav{
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  flex-shrink: 2;
-  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.hero-section-nav-li {
+.hero-section-nav-li{
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 1em;
-  flex-wrap: wrap;
 }
 
-.hero-section-nav-li > li > a {
+.hero-section-nav-li>li>a{
+
   text-decoration: none;
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 2px;
   color: white;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.hero-section-nav-li > li > a:hover {
-  color: rgba(0, 255, 255, 0.8);
+.hero-section-nav-li>li>a:hover{
+  color:rgba(0,255,255, 0.8);   
 }
 
-li {
-  list-style: none;
-}
-
-h1 {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 28px;
-  margin-top: 5em;
-  color: white;
-  text-align: center;
-}
-
-.hero-section article {
+.hero-section article{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.line {
+.line{
   width: 50px;
-  border-bottom: solid 1px rgba(0, 255, 255, 0.8);
+  border-bottom: solid 1px rgba(0,255,255, 0.8);
 }
 
-.hero-section > article > p {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  color: rgba(255, 255, 255, 0.7);
+.hero-section>article>p{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: rgba(255,255,255,0.7);
   line-height: 1.5em;
   margin: 3rem;
   text-align: center;
@@ -91,25 +75,22 @@ h1 {
 
 /* *********** Our Story Section *************** */
 
-.ourstory-section {
-  max-width: 85vw;
+.ourstory-section{
+  /* min-width: 90%; */
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /* flex-wrap: wrap; */
   background-color: white;
 }
 
-.ourstory-section > article {
+.ourstory-section>article{
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* align-items: flex-start; */
 }
 
-.ourstory-section > article > p {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+.ourstory-section>article>p{
   line-height: 1.5em;
   color: rgba(0, 0, 0, 0.493);
   min-width: 200px;
@@ -117,35 +98,35 @@ h1 {
 }
 
 /*  */
-.watchstory-section {
-  min-height: calc(100vh / 2.3);
+.watchstory-section{
+  min-height: 40vh;
+  /* min-width: 90%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-image: url(./img/bgk-middle.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover;    
 }
 
-.play-caption {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+.play-caption{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 0.7em;
+  letter-spacing: 0.08em;
   color: white;
-  align-self: ;
+  /* align-self: ; */
 }
 
 /* *********** Button ************************ */
-.btn-learnMore {
+.btn-learnMore{
   /* display: inline-block; */
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   align-self: center;
   /* margin-left: 30vw; */
-  color: rgba(0, 255, 255, 0.8);
+  color:rgba(0,255,255, 0.8);
   letter-spacing: 0.04em;
   margin-bottom: 3em;
   padding: 0.8em 1em;
-  border: 1px solid rgba(0, 255, 255, 0.8);
-}
+  border: 1px solid rgba(0,255,255, 0.8);
+
