--- a/style.css
+++ b/style.css
@@ -1,12 +1,28 @@
-body{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+body {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(214, 217, 219);
 }
 
-.app{
-    max-width: 99vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+li {
+  list-style: none;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: center;
+}
+
+.c-wh {
+  color: white;
+}
+
+.app {
+  min-width: 80vw;
+  display: relative;
 }
