--- a/styleNiklas.css
+++ b/styleNiklas.css
@@ -1,16 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
-/* *********** Expertise-Section *************** */
 
 .expertise {
   font-size: 62.5%;
   background-color: white;
   color: black;
-  min-height: 60vh;
   display: flex;
-  margin-left: 20%;
-  margin-right: 20%;
   flex-direction: column;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .expertise p {
@@ -20,6 +17,7 @@
   text-align: center;
 }
 .expertise h2 {
+  margin-top: 2em;
   font-size: 1.8rem;
 }
 
@@ -41,20 +39,17 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  flex-wrap: wrap;
 }
 
 .card-section-top {
   display: flex;
   flex-direction: row;
   border-bottom: solid 0.1rem lightgray;
-  flex-wrap: wrap;
 }
 
 .card-section-bottom {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
 .card {
@@ -73,15 +68,17 @@
   color: lightgray;
   font-size: 1rem;
 }
-/* *********** MEET OUR AMAZING TEAM SECTION *************** */
+
 .meet-our-amazin-team {
+  /* min-width: 90%; */
   background-image: url("img/bgk-header.png");
   background-size: cover;
-  min-height: 60vh;
+  min-height: 70vh;
   color: white;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   flex-direction: column;
+  justify-content: center;
 }
 
 .team-section-header {
@@ -89,6 +86,7 @@
   margin-top: 1.5rem;
   flex-direction: column;
   align-items: center;
+  line-height: 0.5em;
 }
 
 .team-section-header p {
@@ -108,7 +106,6 @@
   flex-direction: column;
   border: solid 0.1rem lightgray;
   align-items: center;
-  flex-wrap: wrap;
 }
 .team-card:is(:nth-child(1), :nth-child(2), :nth-child(3)) {
   margin-right: 1rem;
@@ -136,16 +133,18 @@
 }
 
 #hiring-button {
-  border: solid 0.2rem rgb(134, 215, 205);
-  border-radius: 0.3rem;
+  border: solid 0.1rem rgb(134, 215, 205);
+  border-radius: 0.1rem;
   padding: 1.1rem;
   color: rgb(134, 215, 205);
 }
 .contact-section {
+  /* min-width: 90%; */
+  background-color: white;
   display: flex;
   min-height: 60vh;
   justify-content: center;
-
+  /* border: solid 2px red; */
   flex-wrap: wrap;
 }
 
@@ -158,17 +157,15 @@
   flex-direction: column;
   align-items: flex-start;
   margin-right: 5rem;
-  flex-wrap: wrap;
 }
 .contact-field input {
-  padding: 1rem 8rem;
+  padding: 0.8rem 12rem 0.8rem 0.3rem;
   margin-bottom: 1rem;
   border: solid 0.1rem lightgray;
-  color: lightgray;
+  color: rgb(182, 180, 180);
 }
-
 #big-inputbox {
-  padding: 8rem;
+  padding: 0.5rem 12rem 8rem 0.3rem;
 }
 #button {
   border: solid 0.1rem rgb(134, 215, 205);
@@ -182,7 +179,6 @@
 .partner-wrapper {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
 }
 .partner-logo-wrapper {
   display: flex;
@@ -195,46 +191,110 @@
   flex-direction: column;
   align-items: baseline;
   margin-right: 5rem;
-  flex-wrap: wrap;
 }
 
 .last-five-logos {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  flex-wrap: wrap;
 }
 footer {
+  /* min-width: 90%; */
   background-image: url(/img/bgk-footer.png);
   background-size: cover;
   height: 30vh;
-  display: flex;
   color: white;
 }
 
 .footer-wrapper-main {
+  /* max-width: 70%; */
+  /* margin-top: 2%;
+  margin-left: 15%; */
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  gap: 1em;
 }
 
 .footer-wrapper-main-left {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+}
+
+.social-media {
+  margin-top: 8%;
+}
+
+.location {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.location > img {
+  align-self: flex-start;
+  padding-top: 1em;
+  padding-right: 0.8em;
+}
+
+.phone {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.phone > img {
+  padding-right: 0.8em;
 }
 
 .footer-wrapper-main-middle {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
 .footer-wrapper-main-right {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+}
+
+.footer-wrapper-bottom {
+  display: flex;
+  justify-content: center;
+  gap: 24em;
+}
+
+.footer-bottom-left {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
+
+.footer-bottom-right {
+  display: flex;
+  padding: 0 1em;
+}
+
+.email-senden {
+  position: relative;
+  display: inline-block;
+  top: 0.6em;
+  width: 2.5rem;
+  height: 1.45rem;
+  margin-left: 0.2em;
+  padding: 0.5em 0.2em 0.2em 0.5em;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+}
+
+#email {
+  color: rgba(255, 255, 255, 0.612);
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0.6em;
+  border-radius: 3px;
 }
