--- a/styleOlli.css
+++ b/styleOlli.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display&family=Roboto:wght@100;400&display=swap");
+/**    
+font-family: 'Hammersmith One', sans-serif;
+
+    font-family: 'Playfair Display', serif;
+
+    font-family: 'Roboto', sans-serif;
+
+    **/
+
+
+
 /* ****************** Hero Section ****************** */
 .hero-section{
   /* min-width: 90%; */
@@ -18,7 +30,8 @@
 }
 
 .tajam-caption{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: lighter;
   font-size: 1.6em;
   letter-spacing: 0.04em;
   color: rgba(0,255,255, 0.5); 
@@ -58,14 +71,21 @@
   align-items: center;
 }
 
+.hero-section article h1{
+  font-family: 'Playfair Display', serif;
+  font-size: 32px ;
+  color: white;
+}
+
 .line{
   width: 50px;
   border-bottom: solid 1px rgba(0,255,255, 0.8);
 }
 
 .hero-section>article>p{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: rgba(255,255,255,0.7);
+  font-family: 'Roboto', sans-serif;
+  font-weight: lighter;
+  color: white;
   line-height: 1.5em;
   margin: 3rem;
   text-align: center;
@@ -95,6 +115,8 @@
   color: rgba(0, 0, 0, 0.493);
   min-width: 200px;
   max-width: 1000px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
 }
 
 /*  */
