hoffentlich jetzt alles ok

--- a/styleOlli.css
+++ b/styleOlli.css
@@ -8,11 +8,9 @@ font-family: 'Hammersmith One', sans-serif;
 
     **/
 
-
-
 /* ****************** Hero Section ****************** */
 
-.hero-section{
+.hero-section {
   /* min-width: 90%; */
   min-height: 14vh;
   display: flex;
@@ -23,71 +21,68 @@ font-family: 'Hammersmith One', sans-serif;
   background-size: cover;
 }
 
-.tajam{
+.tajam {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: -1%;
 }
 
-.tajam-caption{
-  font-family: 'Roboto', sans-serif;
+.tajam-caption {
+  font-family: "Roboto", sans-serif;
   font-weight: lighter;
   font-size: 1.6em;
   letter-spacing: 0.04em;
-  color: rgba(0,255,255, 0.5); 
+  color: rgba(0, 255, 255, 0.5);
   /* background: linear-gradient(#64e4e6, #5561e7); */
 }
 
-.hero-section-nav{
+.hero-section-nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
-
 }
 
-.hero-section-nav-li{
+.hero-section-nav-li {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 1em;
 }
 
-.hero-section-nav-li>li>a{
-
+.hero-section-nav-li > li > a {
   text-decoration: none;
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 2px;
   color: white;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-.hero-section-nav-li>li>a:hover{
-  color:rgba(0,255,255, 0.8);   
+.hero-section-nav-li > li > a:hover {
+  color: rgba(0, 255, 255, 0.8);
 }
 
-
-.hero-section article{
+.hero-section article {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
-.hero-section article h1{
-  font-family: 'Playfair Display', serif;
-  font-size: 32px ;
+.hero-section article h1 {
+  font-family: "Playfair Display", serif;
+  font-size: 32px;
   color: white;
 }
 
-.line{
+.line {
   width: 50px;
-  border-bottom: solid 1px rgba(0,255,255, 0.8);
+  border-bottom: solid 1px rgba(0, 255, 255, 0.8);
 }
 
-.hero-section>article>p{
-  font-family: 'Roboto', sans-serif;
+.hero-section > article > p {
+  font-family: "Roboto", sans-serif;
   font-weight: lighter;
   color: white;
   line-height: 1.5em;
@@ -99,8 +94,7 @@ font-family: 'Hammersmith One', sans-serif;
 
 /* *********** Our Story Section *************** */
 
-
-.ourstory-section{
+.ourstory-section {
   /* min-width: 90%; */
   display: flex;
   flex-direction: row;
@@ -108,24 +102,24 @@ font-family: 'Hammersmith One', sans-serif;
   background-color: white;
 }
 
-.ourstory-section>article{
+.ourstory-section > article {
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* align-items: flex-start; */
 }
 
-.ourstory-section>article>p{
+.ourstory-section > article > p {
   line-height: 1.5em;
   color: rgba(0, 0, 0, 0.493);
   min-width: 200px;
   max-width: 1000px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 100;
 }
 
 /*  */
-.watchstory-section{
+.watchstory-section {
   min-height: 40vh;
   /* min-width: 90%; */
   display: flex;
@@ -134,27 +128,28 @@ font-family: 'Hammersmith One', sans-serif;
   align-items: center;
   background-image: url(./img/bgk-middle.png);
   background-repeat: no-repeat;
-  background-size: cover;    
+  background-size: cover;
 }
 
-.play-caption{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.play-caption {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   font-size: 0.7em;
   letter-spacing: 0.08em;
   color: white;
   /* align-self: ; */
 }
 
-
 /* *********** Button ************************ */
-.btn-learnMore{
+.btn-learnMore {
   /* display: inline-block; */
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   align-self: center;
   /* margin-left: 30vw; */
-  color:rgba(0,255,255, 0.8);
+  color: rgba(0, 255, 255, 0.8);
   letter-spacing: 0.04em;
   margin-bottom: 3em;
   padding: 0.8em 1em;
-  border: 1px solid rgba(0,255,255, 0.8);
-
+  border: 1px solid rgba(0, 255, 255, 0.8);
+}
