--- a/styleNiklas.css
+++ b/styleNiklas.css
@@ -49,6 +49,7 @@ font-family: "Roboto", sans-serif;
 }
 
 .card-wrapper {
+  max-width: 95%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -300,9 +301,13 @@ footer {
 }
 
 .footer-wrapper-bottom {
+  font-size: 0.9em;
   display: flex;
   justify-content: center;
   gap: 24em;
+  max-width: 90%;
+  margin-left: 8%;
+  margin-right: 11%;
 }
 
 
