--- a/styleOlli.css
+++ b/styleOlli.css
@@ -95,7 +95,7 @@ font-family: 'Hammersmith One', sans-serif;
 /* *********** Our Story Section *************** */
 
 .ourstory-section {
-  /* min-width: 90%; */
+  padding: 0 5%;
   display: flex;
   flex-direction: row;
   justify-content: center;
