--- a/styleOlli.css
+++ b/styleOlli.css
@@ -61,7 +61,7 @@ font-family: 'Hammersmith One', sans-serif;
 }
 
 .hero-section-nav-li > li > a:hover {
-  color: rgba(0, 255, 255, 0.8);
+  color: rgba(0, 224, 208, 255);
 }
 
 .hero-section article {
@@ -78,7 +78,7 @@ font-family: 'Hammersmith One', sans-serif;
 
 .line {
   width: 50px;
-  border-bottom: solid 1px rgba(0, 255, 255, 0.8);
+  border-bottom: solid 1px rgba(0, 224, 208, 255);
 }
 
 .hero-section > article > p {
@@ -142,14 +142,12 @@ font-family: 'Hammersmith One', sans-serif;
 
 /* *********** Button ************************ */
 .btn-learnMore {
-  /* display: inline-block; */
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Hammersmith One", sans-serif;
   align-self: center;
-  /* margin-left: 30vw; */
-  color: rgba(0, 255, 255, 0.8);
+
+  color: rgba(0, 224, 208, 255);
   letter-spacing: 0.04em;
   margin-bottom: 3em;
   padding: 0.8em 1em;
-  border: 1px solid rgba(0, 255, 255, 0.8);
+  border: 1px solid rgba(0, 224, 208, 255);
 }
